# lai_rag

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: relatorio_lai_rag.ipynb
src/: __init__.py  attachments.py  bootstrap.py  config.py  costs.py  download.py  index.py  models.py  openai_client.py  prepare.py  rag.py  retrieval.py  safety.py
tests/: test_attachments.py  test_costs.py  test_index.py  test_prepare.py  test_rag.py  test_safety.py
