[project]
name = "llm-law-rag"
version = "0.1.0"
description = "Assistente RAG para pedidos e recursos da LAI 2026."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chromadb>=0.5.23",
    "matplotlib>=3.9.0",
    "openai>=1.93.0",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "pydantic>=2.8.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.37.0",
    "tiktoken>=0.7.0",
    "wordcloud>=1.9.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.0",
    "nbformat>=5.10.4",
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
